--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -21,12 +21,13 @@
             <version>13</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.commands</groupId>-->
-<!--            <artifactId>Commands</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.commands</groupId>
+            <artifactId>Commands</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>/home/sharkvale/.m2/repository/Commands-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
 
 
 
