auth don't work

--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.34.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.commands</groupId>
+            <artifactId>Commands</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 
     </dependencies>
