--- a/Commands/pom.xml
+++ b/Commands/pom.xml
@@ -17,4 +17,15 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
 
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.4</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
